Fixed group message type dropdown spacing issue

--- a/src/bp-templates/bp-nouveau/readylaunch/css/groups-single.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/groups-single.css
@@ -3257,7 +3257,7 @@ div#bp-group-message-content {
   margin-left: auto;
   background-color: var(--bb-rl-background-secondary-color);
   border-color: var(--bb-rl-border-secondary-color);
-  padding: 4px var(--bb-rl-space-200) 4px var(--bb-rl-space-100);
+  padding: 4px var(--bb-rl-space-400) 4px var(--bb-rl-space-100);
   background-position: right 10px center;
 }
 
